Fixed some bugs

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -6,7 +6,7 @@
       "configurationType": "Debug",
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "-DGUI_DEMO=watch",
+      "cmakeCommandArgs": "-DGUI_DEMO=calculator",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "msvc_x86" ],
